--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="questionString">How to use the cards?</string>
     <string name="answerString">History search results will be presented here. \nSwipe cards left or right if you don\'t want to see it anymore.</string>
+    <string name="search_hint">Search Your questions here:</string>>
 </resources>
